[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = { git = "https://github.com/bincode-org/bincode.git", branch = "trunk" }
env_logger = "0.11.5"
log = "0.4.22"
rand = "0.8.5"
renet = "0.0.16"
common = { path = "../common" }
tokio = { version = "1.39.2", features = ["full"] }
